# msu_stress_poligraph

./: .cursorignore  .gitignore  README.md  lunohod_rest_predobrabotka.py  lunohod_rest_work.py  lunohod_work_1.py  pyproject.toml  script_predobrabotka.py  script_rest_work.py  script_work.py  setup.py
data/raw/: README.md
data/result/: README.md
