[project]
name = "msu-stress-poligraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pyedflib>=0.1.42",
    "scipy>=1.16.0",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
